test/spec_vectors/simd_i8x16_cmp/fail/module_29.wat
(module (func $i8x16.ge_s-arg-empty (result v128) (i8x16.ge_s)))